--- a/app/assets/stylesheets/_shared.scss
+++ b/app/assets/stylesheets/_shared.scss
@@ -4,38 +4,46 @@
   float: left;
 
 
-  .side_header{
+  .header{
    background-color: #253141;
     height: 100px;
     display: flex;
     align-items: center;
     padding: 0 20px;
 }
-  .header_top{
+  .header__name{
     margin-right: 11.5rem;
   }
 
-  .header__btn{
-    color: white;
+  
+  .header__lists{
+    font: normal normal normal 14px/1 FontAwesome;
+    font-size: inherit;
+    margin-left: 200px;
+    display: flex;
+
+    .header__btn{
+      color: white;
+    }
   }
 
 
-  .header_edit{
-      display: inline-block;
-      font: normal normal normal 14px/1 FontAwesome;
-      font-size: inherit;
-      text-rendering: auto;
-      -webkit-font-smoothing: antialiased;
-      margin-left: 0.3rem;
-    }
-  .header_setting{
-      display: inline-block;
-      font: normal normal normal 14px/1 FontAwesome;
-      font-size: inherit;
-      text-rendering: auto;
-      -webkit-font-smoothing: antialiased;
-      margin-left: 0.3rem;
-    }
+  // .header_edit{
+  //     display: inline-block;
+  //     font: normal normal normal 14px/1 FontAwesome;
+  //     font-size: inherit;
+  //     text-rendering: auto;
+  //     -webkit-font-smoothing: antialiased;
+  //     margin-left: 0.3rem;
+  //   }
+  // .header_setting{
+  //     display: inline-block;
+  //     font: normal normal normal 14px/1 FontAwesome;
+  //     font-size: inherit;
+  //     text-rendering: auto;
+  //     -webkit-font-smoothing: antialiased;
+  //     margin-left: 0.3rem;
+  //   }
   }
   
   .groupbox{
