--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -2,3 +2,17 @@
 @import "font-awesome-sprockets";
 @import "./font-awesome";
 @import "./shared";
+@import "user";
+@import "config/colors";
+@import "modules/flash";
+
+// @import "font-awesome";
+// @import "config/colors";
+// @import "config/size";
+// @import "config/reset";
+// @import "mixins/mixin";
+// @import "mixins/vendor_prefix";
+// @import "modules/side_bar";
+// @import "modules/chat";
+// @import "modules/user";
+// @import "messages/messages.scss"
