--- a/app/views/shared/_side_bar.html.haml
+++ b/app/views/shared/_side_bar.html.haml
@@ -6,21 +6,23 @@
       = current_user.name
     %ul.header__lists
       %li.list
-      = link_to "#", class: "header__btn" do
-        = icon('fa', 'edit')
+        = link_to new_group_path do
+          = icon('fas', 'edit', class: 'icon')
       %li.list
-        = link_to edit_user_path(current_user),class: "header__btn" do
-          = icon('fa', 'cog')
+        = link_to edit_user_path(current_user) do
+          = icon('fas', 'cog', class: 'icon')
       
 
   .groupbox
-    .group
-      .groupbox__name1
-        タロウ
-      .groupbox__message1
-        nice!
-      .groupbox__name2
-        TAROU
-      .groupbox__message2
-        good!!
-      
+    - current_user.groups.each do |group|
+      .group
+        = link_to group_messages_path(group) do
+          .groupbox__name1
+            = group.name
+          .groupbox__message1
+            メッセージはまだありません。
+          -# .groupbox__name2
+          -#   TAROU
+          -# .groupbox__message2
+          -#   good!!
+            
