--- a/app/views/shared/_side_bar.html.haml
+++ b/app/views/shared/_side_bar.html.haml
@@ -19,7 +19,7 @@
         = link_to group_messages_path(group) do
           .groupbox__name1
             = group.name
-          .groupbox__message1
+          .groupbox__message1aaa
             メッセージはまだありません。
           -# .groupbox__name2
           -#   TAROU
