インクリメンタルサーチ

--- a/app/views/messages/_message.html.haml
+++ b/app/views/messages/_message.html.haml
@@ -1,4 +1,4 @@
-.contents_main1
+.contents_main1{"data-message-id": "#{message.id}"}
   .message__sender1
     = message.user.name
   .message__date1
