--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,6 +1,6 @@
 @import "./reset";
-@import "font-awesome-sprockets";
-@import "./font-awesome";
+// @import "font-awesome-sprockets";
+@import "font-awesome";
 @import "./shared";
 @import "modules/user";
 @import "config/colors";
