--- a/app/views/shared/_side_bar.html.haml
+++ b/app/views/shared/_side_bar.html.haml
@@ -7,10 +7,11 @@
     %ul.header__lists
       %li.list
         = link_to new_group_path do
-          = icon('fas', 'edit', class: 'icon')
+          = fa_icon 'edit', class: 'icon'
       %li.list
         = link_to edit_user_path(current_user) do
-          = icon('fas', 'cog', class: 'icon')
+          = fa_icon 'cog', class: 'icon'
+  
       
 
   .groupbox
