--- a/app/assets/stylesheets/_shared.scss
+++ b/app/assets/stylesheets/_shared.scss
@@ -11,6 +11,7 @@
     display: flex;
     align-items: center;
     padding: 0 20px;
+    position: relative;
     
 }
   .header__name{
@@ -21,11 +22,15 @@
   .header__lists{
     font: normal normal normal 14px/1 FontAwesome;
     font-size: inherit;
-    margin-left: 200px;
-    display: flex;
-
-    .icon{
-      color: white;
+    position: absolute;
+    top: 42%;
+    right: 20px;
+    width: 40px;
+    .list {
+      display: inline-block;
+      .icon{
+        color: white;
+      }
     }
   }
 
@@ -85,6 +90,7 @@
     right: 40px;
     top: 10px;
     color: #38aef0;
+
     }
 
     .main_header_left{
@@ -161,8 +167,7 @@
     }
   
 
-  // .form_form{
-  //   display: flex;
+
 
     .input_box {
       height: 50px;
@@ -214,4 +219,9 @@
   -o-box-sizing: border-box;
   -ms-box-sizing: border-box;
   box-sizing: border-box;
+}
+
+.header_edit_btn a {
+  color: #38aef0;
+  text-decoration: none;
 }
