--- a/app/assets/stylesheets/_shared.scss
+++ b/app/assets/stylesheets/_shared.scss
@@ -187,9 +187,10 @@
 
     .input-box__image{
      position: absolute;
-     right: 0;
-     top: 15px;
-     font-size: 22px;
+    //  right: 0;
+     top: 13px;
+     left: 910px;
+     font-size: 20px;
     }
 
     .text{
@@ -225,3 +226,4 @@
   color: #38aef0;
   text-decoration: none;
 }
+
