--- a/app/views/messages/_message.html.haml
+++ b/app/views/messages/_message.html.haml
@@ -2,7 +2,7 @@
   .message__sender1
     = message.user.name
   .message__date1
-    = message.created_at.strftime("%Y/%m/%d %H:%M")
+    = message.created_at.strftime("Y年%m月%d日 %H時%M分")
   .message__details1
     - if message.content.present?
       %p.lower-message__content
