--- a/app/views/shared/_side_bar.html.haml
+++ b/app/views/shared/_side_bar.html.haml
@@ -5,8 +5,9 @@
     .name
       = current_user.name
     %ul.header__lists
-      %li.list
+      %li.list 
         = link_to new_group_path do
+          ffff
           = fa_icon 'edit', class: 'icon'
       %li.list
         = link_to edit_user_path(current_user) do
